--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.3",
     "bootstrap": "^5.3.5",
+    "mui-one-time-password-input": "^5.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
