--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.3",
     "zod": "^3.24.3"
   },
